# VIVID_Med

./: .gitignore  AGENTS.md  BiVES_995fb81_code_review_and_next_plan.md  BiVES_C6G_MS_CXR_geometry_protocol_plan.md  BiVES_CXR_MIA_TMI_ready_proposal.md  BiVES_next_direction_without_local_clinical_review_2026-07-17.md  BiVES_support_polarity_root_cause_and_repair.md  BiVES_uncertain_selector_evidence_diagnostic_plan.md  PIPM_FiVPU_Official_Fisher_Direction_Calibration_Diagnostic_CN.md  README.md  VIVID_EXTENSION_BRANCH.md  __init__.py  findings.md  progress.md  requirements-bives-local-lock.txt  requirements-bives-server-lock.txt  requirements.txt  task_plan.md  vivid_med_a800_full_next_experiment_plan.md  vivid_med_cvcp_ccsh_full_next_experiment_plan.md  vivid_med_next_stage_comprehensive_experiment_plan.md  vivid_med_qwen3vl_proposal_v2_modification_plan.md
extensions/rcsd_cxr/: .gitignore  AGENTS.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
extensions/rcsd_cxr/audit/: RCSD_COMPONENT_ATTRIBUTION_PLAN.md  RCSD_D0_D1_AUTO_DEV_PROTOCOL.md  RCSD_D0_D1_QWEN35_2B_TERMINAL_RESULT.md  RCSD_D0_D1_REVIEW_PROTOCOL.md  RCSD_P0_NO_GO_VERDICT.md  README.md  rcsd_component_status.json  rcsd_d0_d1_qwen35_2b_terminal_result.json  rcsd_d0_d1_review_lock.json
extensions/rcsd_cxr/configs/: server_queue_4161.yaml  track_a_pilot.yaml
extensions/rcsd_cxr/data_refs/: chexpert_lineage_manifest.json  datasets.example.yaml  datasets.server.yaml  gate0_qualification.server.yaml
extensions/rcsd_cxr/docs/: RCSD_CXR_active_protocol.md  remote_vivid_cleanup_plan.md  (+8 more)
(+1303 files in other folders)
