[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcsd-cxr"
version = "0.1.0"
description = "Reliability-calibrated structured distillation for chest radiographs"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=9.5",
  "PyYAML>=6.0",
  "torch>=2.1",
  "safetensors>=0.4",
  "torchvision>=0.16",
]

[project.optional-dependencies]
train = [
  "timm>=0.9.16",
  "transformers>=4.44",
  "scikit-learn>=1.3",
  "pandas>=2.0",
]
deploy = [
  "paramiko>=3.4",
]

[tool.setuptools.packages.find]
include = ["rcsd_cxr*"]
